Fix for wizard height issue
This should take care of the layout issue mentioned below
https://meta.discourse.org/t/custom-wizard-plugin/73345/272?u=makarygo

--- a/assets/stylesheets/wizard_custom_admin.scss
+++ b/assets/stylesheets/wizard_custom_admin.scss
@@ -297,3 +297,7 @@
     margin-left: 15px;
   }
 }
+
+.wizard-step-contents{
+    height: unset !important;    
+}
